[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/FallingPlatform.gd" type="Script" id=1]
[ext_resource path="res://tileset/textures/TexturesCom_DecalsDamageFloor0022_1_masked_S.png" type="Texture" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.996078, 0.996078, 0.996078, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 1.56569, 1 )

[node name="FallingPlatform" type="KinematicBody"]
transform = Transform( 2.5, 0, 0, 0, 0.5, 0, 0, 0, 1.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.578156, 0 )
shape = SubResource( 4 )
[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
